--- a/package.json
+++ b/package.json
@@ -53,11 +53,11 @@
     "framer-motion": "^11.0.6",
     "input-otp": "^1.0.1",
     "lucide-react": "^0.341.0",
-    "next": "^14.1.0",
+    "next": "14.1.0",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-native": "^0.73.4",
     "react-particles": "^2.12.2",
